# Arith-DAS

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pipeline.py  requirements.txt
configs/config_groups/: mac_16_and.yaml  mac_32_and.yaml  mul_16_and.yaml  mul_16_booth.yaml  mul_32_and.yaml  mul_32_booth.yaml  mul_64_and.yaml  mul_64_booth.yaml  mul_8_and.yaml  mul_8_booth.yaml
trainer/: __init__.py  arith_das.py  arith_das_mac.py  base.py
utils/: __init__.py  adder_utils.py  common.py  compressor_tree.py  mul.py  template.py
verilate/: add_verilate.cpp  mac_verilate.cpp  mul_verilate.cpp
